fix scrolling on ios

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -23,11 +23,11 @@
 }
 
 .app-content {
-  flex: 1;
   margin: 0 auto;
   padding-top: 2em;
   padding-left: 20vw;
   padding-right: 20vw;
+  min-height: 100vh;
 }
 
 .app-is-mobile {
